switch gameplay-screen load to ajax

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles/styles.css">
+        <title>Guess The Pitch</title>
+        <script src="js/app.js"></script>
     </head>
     <body>
         <div class="main-center">
             <img src="img/flyingNotes.svg" class="flyingNotesImg" draggable="false">
             <img src="img/logo.svg" class="logoImg" draggable="false">
             <div class="playButtonDiv">
-                <div class="linkImageWrapper">
-                    <a href="play" draggable="false">
-                        <img src="img/startPlayButton.svg" draggable="false" class="wrappedImage">
-                    </a>
+                <div class="startGameBtnWrapper">
+                    <button id="startGameBtn" class="startGameBtn"></button>
                 </div>
                 <div class="centerImageWrapper">
                     <img src="img/buttonBackgroundStaff.svg" class="backgroundStaffLines" draggable="false">
