--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <link rel="stylesheet" href="styles/styles.css">
         <title>Guess The Pitch</title>
         <script src="js/app.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <div class="main-center">
+        <div class="mainCenter">
             <img src="img/flyingNotes.svg" class="flyingNotesImg" draggable="false">
             <img src="img/logo.svg" class="logoImg" draggable="false">
             <div class="playButtonDiv">
