--- a/play.html
+++ b/play.html
@@ -5,12 +5,13 @@
         <title>Guess The Pitch</title>
         <link rel="stylesheet" href="styles/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <script src="js/app.js"></script>
     </head>
     <body>
         <div class="mainCenter playArea">
             <div class="audioControlsDiv">
                 <button id="playAudioBtn" class="playAudioBtn"></button>
-                <input type="range">
+                <input type="range" id="volumeSlider" min="0" max="0.5" step="0.01">
             </div>
 
             <div class="pianoDiv">
