switch from oscillator to piano sounds

--- a/play.html
+++ b/play.html
@@ -11,7 +11,7 @@
         <div class="mainCenter playArea">
             <div class="audioControlsDiv">
                 <button id="playAudioBtn" class="playAudioBtn"></button>
-                <input type="range" id="volumeSlider" min="0" max="0.5" step="0.01">
+                <input type="range" id="volumeSlider" min="0" max="1" step="0.01">
             </div>
 
             <div class="pianoDiv">
@@ -26,11 +26,11 @@
                 </div>
                 
                 <div class="blackKeysDiv">
-                    <button data-key-id="C#" class="blackKey leftmost"></button>
-                    <button data-key-id="D#" class="blackKey mid"></button>
-                    <button data-key-id="F#" class="blackKey left"></button>
-                    <button data-key-id="G#" class="blackKey left"></button>
-                    <button data-key-id="A#" class="blackKey left"></button>
+                    <button data-key-id="Db" class="blackKey leftmost"></button>
+                    <button data-key-id="Eb" class="blackKey mid"></button>
+                    <button data-key-id="Gb" class="blackKey left"></button>
+                    <button data-key-id="Ab" class="blackKey left"></button>
+                    <button data-key-id="Bb" class="blackKey left"></button>
                 </div>
             </div>
         </div>
