add mobile responsiveness to win screen

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="introHtml">
     <head>
         <link rel="stylesheet" href="styles/styles.css">
         <title>Guess The Pitch</title>
