--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html class="introHtml">
     <head>
-        <link rel="stylesheet" href="styles/styles.css">
         <title>Guess The Pitch</title>
+
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="icon" href="img/trebleClef.svg">
+
         <script src="js/app.js"></script>
+        
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
