--- a/play.html
+++ b/play.html
@@ -3,7 +3,10 @@
 <html>
     <head>
         <title>Guess The Pitch</title>
+        
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="icon" href="img/trebleClef.svg">
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="js/app.js"></script>
     </head>
