--- a/win.html
+++ b/win.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Guess The Pitch</title>
+
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="icon" href="img/trebleClef.svg">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
