--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="introHtml">
+<html class="introHtml" lang="en">
     <head>
         <title>Guess The Pitch</title>
 
@@ -7,19 +7,19 @@
         <link rel="icon" href="img/trebleClef.svg">
 
         <script src="js/app.js"></script>
-        
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="mainCenter">
-            <img src="img/flyingNotes.svg" class="flyingNotesImg" draggable="false">
-            <img src="img/logo.svg" class="logoImg" draggable="false">
+            <img src="img/flyingNotes.svg" class="flyingNotesImg" draggable="false" alt="flying notes on sheet music lines">
+            <img src="img/logo.svg" class="logoImg" draggable="false" alt="Guess The Pitch logo">
             <div class="playButtonDiv">
                 <div class="startGameBtnWrapper">
                     <button id="startGameBtn" class="startGameBtn"></button>
                 </div>
                 <div class="centerImageWrapper">
-                    <img src="img/buttonBackgroundStaff.svg" class="backgroundStaffLines" draggable="false">
+                    <img src="img/buttonBackgroundStaff.svg" class="backgroundStaffLines" draggable="false" alt="sheet music lines">
                 </div>
             </div>
         </div>            
