--- a/play.html
+++ b/play.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <title>Guess The Pitch</title>
         
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="icon" href="img/trebleClef.svg">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="js/app.js"></script>
     </head>
     <body>
